[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/character/Rogue/Rogue-sheet.png" type="Texture" id=1]
[ext_resource path="res://Character.gd" type="Script" id=2]
[ext_resource path="res://images/tileset/BG1.png" type="Texture" id=3]
[ext_resource path="res://images/tileset/BG3.png" type="Texture" id=4]
[ext_resource path="res://images/tileset/BG2.png" type="Texture" id=5]
[ext_resource path="res://images/Effects/hp_progress_white.png" type="Texture" id=6]
[ext_resource path="res://images/Effects/hp_top.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackMovement"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack 2"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackMovement"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/Attack2Area:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack 3"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackMovement"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/Attack3Area:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}

[sub_resource type="Animation" id=5]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 59 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Dash Back"

[sub_resource type="Animation" id=7]
resource_name = "Dash Forward"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "frontDashMovement"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Hurt Left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "HurtMovement"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/Attack2Area:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackArea/Attack3Area:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hurt Right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "HurtMovement"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackArea:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/Attack2Area:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackArea/Attack3Area:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=13]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="CapsuleShape2D" id=14]
radius = 14.9647
height = 14.0387

[sub_resource type="CapsuleShape2D" id=15]
radius = 17.017
height = 14.431

[sub_resource type="CapsuleShape2D" id=16]
radius = 10.9251
height = 31.3824

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 12
hframes = 10
frame = 59

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true
smoothing_speed = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = -2
scale = Vector2( 3.2, 3.125 )
transform = Transform2D( 3.2, 0, 0, 3.125, 0, 0 )

[node name="Sky" type="Sprite" parent="Camera2D/CanvasLayer"]
texture = ExtResource( 3 )
centered = false

[node name="Background" type="ParallaxBackground" parent="Camera2D"]
layer = -1
follow_viewport_enable = true
follow_viewport_scale = 0.3

[node name="Clouds" type="ParallaxLayer" parent="Camera2D/Background"]
motion_scale = Vector2( 0.125, 0 )
motion_mirroring = Vector2( 640, 0 )

[node name="CloudsTop" type="Sprite" parent="Camera2D/Background/Clouds"]
z_index = -2
texture = ExtResource( 5 )
offset = Vector2( 80, 0 )

[node name="CloudsBot" type="Sprite" parent="Camera2D/Background/Clouds"]
texture = ExtResource( 5 )
offset = Vector2( 80, 160 )
flip_v = true

[node name="Cloud Mid" type="ParallaxLayer" parent="Camera2D/Background"]
motion_scale = Vector2( 0.125, 0 )
motion_mirroring = Vector2( 480, 0 )

[node name="CloudsMid" type="Sprite" parent="Camera2D/Background/Cloud Mid"]
texture = ExtResource( 5 )
offset = Vector2( 160, 40 )

[node name="Mountains" type="ParallaxLayer" parent="Camera2D/Background"]
motion_scale = Vector2( 0.25, 0.5 )
motion_offset = Vector2( 0, 40 )
motion_mirroring = Vector2( 640, 0 )

[node name="Mountains" type="Sprite" parent="Camera2D/Background/Mountains"]
z_as_relative = false
texture = ExtResource( 4 )
offset = Vector2( 80, 900 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
"anims/Attack 2" = SubResource( 3 )
"anims/Attack 3" = SubResource( 4 )
"anims/Attack End" = SubResource( 5 )
"anims/Dash Back" = SubResource( 6 )
"anims/Dash Forward" = SubResource( 7 )
anims/Fall = SubResource( 8 )
"anims/Hurt Left" = SubResource( 9 )
"anims/Hurt Right" = SubResource( 10 )
anims/Idle = SubResource( 11 )
anims/Jump = SubResource( 12 )
anims/Walk = SubResource( 13 )

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4

[node name="AttackArea" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 14 )
disabled = true

[node name="Attack2Area" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -1, -1 )
rotation = 1.5708
shape = SubResource( 15 )
disabled = true

[node name="Attack3Area" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 16 )
disabled = true

[node name="Hp_bar" type="TextureProgress" parent="."]
margin_left = -14.5
margin_top = -25.0
margin_right = 15.5
margin_bottom = -19.0
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
tint_under = Color( 0.235294, 0.235294, 0.235294, 1 )
tint_progress = Color( 0.188235, 0.705882, 0.0588235, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_bar_timer" type="Timer" parent="Hp_bar"]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="Hp_bar"]

[node name="Hp_regen" type="Timer" parent="Hp_bar"]
autostart = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="Hp_bar/Hp_bar_timer" to="." method="_on_Hp_timer_timeout"]
[connection signal="timeout" from="Hp_bar/Hp_regen" to="." method="_on_Hp_regen_timeout"]
